--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 </head>
 <body>
   Hello!
+  <a href=https://github.com/downloads/bsf/boosterfw/BoosterLauncher_20120228.zip>BoosterLauncher</a>
 </body>
 </html>
