--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
   Hello!
-  <a href=https://github.com/downloads/bsf/boosterfw/BoosterLauncher_20120228.zip>BoosterLauncher</a>
+  <a href=https://github.com/downloads/bsf/CaBaRe/CaBaRe0504.zip>CaBaRe System</a>
 </body>
 </html>
